--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       - postgres
       - redis
     volumes:
-      - n8n_data:/home/node/.n8n
+      - ./data/n8n:/home/node/.n8n
     networks:
       - core
 
@@ -59,7 +59,7 @@ services:
       - POSTGRES_PASSWORD=n8n
       - TZ=Asia/Jerusalem
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./data/postgres:/var/lib/postgresql/data
     networks:
       - core
 
@@ -68,7 +68,7 @@ services:
     restart: unless-stopped
     profiles: ["core"]
     volumes:
-      - mongo_data:/data/db
+      - ./data/mongo:/data/db
     networks:
       - core
 
@@ -78,7 +78,7 @@ services:
     profiles: ["core"]
     command: ["redis-server", "--appendonly", "yes"]
     volumes:
-      - redis_data:/data
+      - ./data/redis:/data
     networks:
       - core
 
@@ -86,25 +86,30 @@ services:
   # Queue: Kafka (with ZooKeeper)
   # =========================
   zookeeper:
-    image: bitnami/zookeeper:latest
+    image: confluentinc/cp-zookeeper:7.6.1
     restart: unless-stopped
     profiles: ["queue"]
     environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
+      - ZOOKEEPER_CLIENT_PORT=2181
+      - ZOOKEEPER_TICK_TIME=2000
     networks:
       - core
 
   kafka:
-    image: bitnami/kafka:latest
+    image: confluentinc/cp-kafka:7.6.1
     restart: unless-stopped
     profiles: ["queue"]
     depends_on:
       - zookeeper
     environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
-      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_BROKER_ID=1
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:9092
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+      - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1
+      - KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1
     networks:
       - core
 
@@ -130,7 +135,7 @@ services:
     environment:
       - GOTIFY_DEFAULTUSER_PASS=changeme
     volumes:
-      - gotify_data:/app/data
+      - ./data/gotify:/app/data
     networks:
       - core
 
@@ -144,7 +149,7 @@ services:
     ports:
       - "8090:80"
     volumes:
-      - ntfy_data:/var/lib/ntfy
+      - ./data/ntfy:/var/lib/ntfy
     networks:
       - core
 
@@ -163,7 +168,7 @@ services:
       - "9000:9000"  # S3 API
       - "9001:9001"  # Console
     volumes:
-      - minio_data:/data
+      - ./data/minio:/data
     networks:
       - core
 
@@ -204,7 +209,7 @@ services:
       - core
 
   thumbor:
-    image: apsl/thumbor:latest
+    image: ghcr.io/thumbor/thumbor:latest
     restart: unless-stopped
     profiles: ["images"]
     ports:
@@ -248,9 +253,9 @@ services:
       - "8265:8265"  # UI
       - "8266:8266"  # Server
     volumes:
-      - tdarr_server:/app/server
-      - tdarr_configs:/app/configs
-      - tdarr_logs:/app/logs
+      - ./data/tdarr/server:/app/server
+      - ./data/tdarr/configs:/app/configs
+      - ./data/tdarr/logs:/app/logs
       - ./data/tdarr/media:/media
       - ./data/tdarr/temp:/temp
     networks:
@@ -279,7 +284,7 @@ services:
     ports:
       - "9200:9200"
     volumes:
-      - es_data:/usr/share/elasticsearch/data
+      - ./data/elasticsearch:/usr/share/elasticsearch/data
     networks:
       - core
 
@@ -292,7 +297,7 @@ services:
     ports:
       - "7700:7700"
     volumes:
-      - meili_data:/meili_data
+      - ./data/meilisearch:/meili_data
     networks:
       - core
 
@@ -303,7 +308,7 @@ services:
     ports:
       - "8123:8123"  # HTTP only; native port 9000 stays internal
     volumes:
-      - clickhouse_data:/var/lib/clickhouse
+      - ./data/clickhouse:/var/lib/clickhouse
     networks:
       - core
 
@@ -311,7 +316,7 @@ services:
   # Auth / Identity: Keycloak
   # =========================
   keycloak:
-    image: quay.io/keycloak/keycloak:latest
+    image: keycloak/keycloak:24.0.5
     restart: unless-stopped
     profiles: ["auth"]
     command: ["start-dev"]
@@ -343,12 +348,12 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - grafana_data:/var/lib/grafana
+      - ./data/grafana:/var/lib/grafana
     networks:
       - core
 
   loki:
-    image: grafana/loki:latest
+    image: grafana/loki:2.9.8
     restart: unless-stopped
     profiles: ["monitoring"]
     command: ["-config.file=/etc/loki/local-config.yaml"]
@@ -364,7 +369,7 @@ services:
     ports:
       - "3001:3001"
     volumes:
-      - uptime_kuma_data:/app/data
+      - ./data/uptime-kuma:/app/data
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - core
@@ -379,7 +384,7 @@ services:
     ports:
       - "11434:11434"
     volumes:
-      - ollama_data:/root/.ollama
+      - ./data/ollama:/root/.ollama
     networks:
       - core
 
@@ -390,7 +395,7 @@ services:
     ports:
       - "6333:6333"
     volumes:
-      - qdrant_data:/qdrant/storage
+      - ./data/qdrant:/qdrant/storage
     networks:
       - core
 
@@ -408,30 +413,9 @@ services:
       - "8081:8080"
       - "50051:50051"
     volumes:
-      - weaviate_data:/var/lib/weaviate
+      - ./data/weaviate:/var/lib/weaviate
     networks:
       - core
 
 networks:
   core:
-
-volumes:
-  n8n_data:
-  postgres_data:
-  mongo_data:
-  redis_data:
-  minio_data:
-  gotify_data:
-  ntfy_data:
-  es_data:
-  meili_data:
-  clickhouse_data:
-  grafana_data:
-  tdarr_server:
-  tdarr_configs:
-  tdarr_logs:
-  uptime_kuma_data:
-  ollama_data:
-  qdrant_data:
-  weaviate_data:
-
