--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   # =========================
   n8n:
     image: n8nio/n8n:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["core"]
     ports:
       - "5678:5678"
@@ -49,7 +49,7 @@ services:
   # =========================
   postgres:
     image: postgres:16-alpine
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["core"]
     environment:
       - POSTGRES_DB=n8n
@@ -63,7 +63,7 @@ services:
 
   mongo:
     image: mongo:7
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["core"]
     volumes:
       - ./data/mongo:/data/db
@@ -72,7 +72,7 @@ services:
 
   redis:
     image: redis:7-alpine
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["core"]
     command: ["redis-server", "--appendonly", "yes"]
     volumes:
@@ -85,7 +85,7 @@ services:
   # =========================
   zookeeper:
     image: confluentinc/cp-zookeeper:7.6.1
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["queue"]
     environment:
       - ZOOKEEPER_CLIENT_PORT=2181
@@ -95,7 +95,7 @@ services:
 
   kafka:
     image: confluentinc/cp-kafka:7.6.1
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["queue"]
     depends_on:
       - zookeeper
@@ -116,7 +116,7 @@ services:
   # =========================
   mailhog:
     image: mailhog/mailhog:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["email"]
     ports:
       - "1025:1025"  # SMTP
@@ -126,7 +126,7 @@ services:
 
   gotify:
     image: gotify/server:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["email"]
     ports:
       - "8083:80"
@@ -139,7 +139,7 @@ services:
 
   ntfy:
     image: binwiederhier/ntfy:v2.7.0
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["email"]
     command: ["serve"]
     environment:
@@ -156,7 +156,7 @@ services:
   # =========================
   minio:
     image: minio/minio:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["storage"]
     command: server /data --console-address ":9001"
     environment:
@@ -172,7 +172,7 @@ services:
 
   sftp:
     image: atmoz/sftp:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["storage"]
     command: "dev:devpass:1001"
     volumes:
@@ -187,7 +187,7 @@ services:
   # =========================
   imagor:
     image: shumc/imagor:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["images"]
     environment:
       - PORT=8000
@@ -199,7 +199,7 @@ services:
 
   imgproxy:
     image: darthsim/imgproxy:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["images"]
     ports:
       - "8002:8080"
@@ -208,7 +208,7 @@ services:
 
   thumbor:
     image: ghcr.io/thumbor/thumbor:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["images"]
     ports:
       - "8003:8000"
@@ -217,7 +217,7 @@ services:
 
   rembg:
     image: danielgatis/rembg:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["images"]
     command: ["s", "--host", "0.0.0.0", "--port", "7000"]
     ports:
@@ -230,7 +230,7 @@ services:
   # =========================
   ffmpeg-api:
     build: ./ffmpeg-api
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["video"]
     ports:
       - "9002:8080"
@@ -239,7 +239,7 @@ services:
 
   tdarr:
     image: ghcr.io/haveagitgat/tdarr:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["video"]
     environment:
       - TZ=Asia/Jerusalem
@@ -261,7 +261,7 @@ services:
 
   whisper-api:
     build: ./whisper-api
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["video"]
     ports:
       - "9003:8080"
@@ -273,7 +273,7 @@ services:
   # =========================
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.15.0
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["search"]
     environment:
       - discovery.type=single-node
@@ -288,7 +288,7 @@ services:
 
   meilisearch:
     image: getmeili/meilisearch:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["search"]
     environment:
       - MEILI_NO_ANALYTICS=true
@@ -301,7 +301,7 @@ services:
 
   clickhouse:
     image: clickhouse/clickhouse-server:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["search"]
     ports:
       - "8123:8123"  # HTTP only; native port 9000 stays internal
@@ -315,7 +315,7 @@ services:
   # =========================
   keycloak:
     image: keycloak/keycloak:24.0.5
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["auth"]
     command: ["start-dev"]
     environment:
@@ -331,7 +331,7 @@ services:
   # =========================
   prometheus:
     image: prom/prometheus:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["monitoring"]
     ports:
       - "9090:9090"
@@ -343,7 +343,7 @@ services:
 
   grafana:
     image: grafana/grafana:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["monitoring"]
     ports:
       - "3000:3000"
@@ -354,7 +354,7 @@ services:
 
   loki:
     image: grafana/loki:2.9.8
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["monitoring"]
     command: ["-config.file=/etc/loki/local-config.yaml"]
     ports:
@@ -364,7 +364,7 @@ services:
 
   uptime-kuma:
     image: louislam/uptime-kuma:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["monitoring"]
     ports:
       - "3001:3001"
@@ -376,7 +376,7 @@ services:
 
   node-exporter:
     image: prom/node-exporter:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["monitoring"]
     pid: host
     command:
@@ -393,7 +393,7 @@ services:
 
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["monitoring"]
     volumes:
       - /:/rootfs:ro
@@ -407,7 +407,7 @@ services:
 
   promtail:
     image: grafana/promtail:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["monitoring"]
     command: ["-config.file=/etc/promtail/config.yml"]
     volumes:
@@ -423,7 +423,7 @@ services:
   # =========================
   ollama:
     image: ollama/ollama:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["ai"]
     ports:
       - "11434:11434"
@@ -434,7 +434,7 @@ services:
 
   qdrant:
     image: qdrant/qdrant:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["ai"]
     ports:
       - "6333:6333"
@@ -445,7 +445,7 @@ services:
 
   weaviate:
     image: semitechnologies/weaviate:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["ai"]
     environment:
       - QUERY_DEFAULTS_LIMIT=25
@@ -466,7 +466,7 @@ services:
   # =========================
   litellm:
     image: ghcr.io/berriai/litellm:main
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["ai-gateway"]
     environment:
       - LITELLM_PROXY_PORT=4000
@@ -483,7 +483,7 @@ services:
 
   flowise:
     image: flowiseai/flowise:latest
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["agents"]
     environment:
       - PORT=3002
@@ -534,7 +534,7 @@ services:
 
   embeddings-api:
     image: ghcr.io/huggingface/text-embeddings-inference:1.6
-    restart: unless-stopped
+    # restart: unless-stopped
     profiles: ["embeddings"]
     command: ["--model-id", "sentence-transformers/all-MiniLM-L6-v2", "--port", "8086"]
     volumes:
